<<<<<<< Updated upstream:scenes/player.tscn
[gd_scene load_steps=10 format=3 uid="uid://chfjdkxumme1r"]
=======
[gd_scene load_steps=14 format=3 uid="uid://chfjdkxumme1r"]
>>>>>>> Stashed changes:scenes/prefabs/objects/player.tscn

[ext_resource type="Script" path="res://scripts/objects/player/player.gd" id="1_u8q0c"]
[ext_resource type="Material" uid="uid://b38swtg8yloo4" path="res://graphics/materials/PlayerBody.tres" id="2_jy4ju"]
<<<<<<< Updated upstream:scenes/player.tscn
[ext_resource type="Script" path="res://scripts/weapons/sawblade.gd" id="3_6t621"]
[ext_resource type="Material" uid="uid://byypqaapcf25c" path="res://graphics/materials/Sawblade.tres" id="4_nnr5b"]
[ext_resource type="PackedScene" uid="uid://dqn5vwvgp6ddp" path="res://scenes/combat_handler.tscn" id="5_8qfif"]
[ext_resource type="Script" path="res://scripts/player/input_handler.gd" id="6_ui0xh"]
[ext_resource type="Script" path="res://scripts/player/motion_handler.gd" id="7_bdmj6"]
=======
[ext_resource type="Material" uid="uid://uyr61s32rxaj" path="res://graphics/materials/PlayerBody_Bottom.tres" id="2_slssq"]
[ext_resource type="Material" uid="uid://byypqaapcf25c" path="res://graphics/materials/Sawblade.tres" id="4_nnr5b"]
[ext_resource type="Material" uid="uid://cbvhbi7cs2id6" path="res://graphics/materials/Treads.tres" id="4_qq3wf"]
[ext_resource type="PackedScene" uid="uid://dqn5vwvgp6ddp" path="res://scenes/prefabs/utilities/combat_handler.tscn" id="5_8qfif"]
[ext_resource type="Material" uid="uid://bjpw8orsijmuk" path="res://graphics/materials/models/cannon.tres" id="6_u5q6e"]
[ext_resource type="Script" path="res://scripts/objects/player/input_handler.gd" id="6_ui0xh"]
[ext_resource type="ArrayMesh" uid="uid://yk6x46nqkc77" path="res://graphics/models/cannon.obj" id="7_3un1w"]
[ext_resource type="Script" path="res://scripts/objects/player/motion_handler.gd" id="7_bdmj6"]
[ext_resource type="Script" path="res://scripts/objects/weapons/cannon.gd" id="14_1byn2"]
>>>>>>> Stashed changes:scenes/prefabs/objects/player.tscn

[sub_resource type="BoxShape3D" id="BoxShape3D_odmbc"]
size = Vector3(1, 0.333479, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fise2"]
height = 0.021
radius = 0.95

[node name="Player" type="Node3D" groups=["Player Part"]]
script = ExtResource("1_u8q0c")

[node name="Body" type="RigidBody3D" parent="." groups=["Damager", "Player Part"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0303707, 0.535005, -0.0240297)
disable_mode = 2
axis_lock_angular_y = true
mass = 50.0
custom_integrator = true
contact_monitor = true
max_contacts_reported = 10

[node name="Bottom" type="CSGBox3D" parent="Body"]
transform = Transform3D(0.968925, 0, 0, 0, 0.968925, 0, 0, 0, 0.968925, 0, 0.087, 0)
material_override = ExtResource("2_jy4ju")
size = Vector3(1, 0.15, 1)
material = ExtResource("2_jy4ju")

[node name="Top" type="CSGBox3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.269, 0)
material_override = ExtResource("2_jy4ju")
size = Vector3(1, 0.15, 1)

[node name="CollisionShape" type="CollisionShape3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.179051, 0)
shape = SubResource("BoxShape3D_odmbc")

[node name="Weapon" type="RigidBody3D" parent="Body" groups=["Damager", "Player Part"]]
transform = Transform3D(0.999993, 0.00324984, 0.00205345, -0.00324838, 0.999994, -0.000714875, -0.00205576, 0.000708211, 0.999998, 0, 0.179466, 0)
collision_priority = 3.0
mass = 25.0
custom_integrator = true
contact_monitor = true
max_contacts_reported = 10

[node name="CollisionShape" type="CollisionShape3D" parent="Body/Weapon"]
shape = SubResource("CylinderShape3D_fise2")

[node name="Mesh" type="CSGCylinder3D" parent="Body/Weapon"]
material_override = ExtResource("4_nnr5b")
radius = 0.95
height = 0.021
sides = 32

[node name="HingeJoint3D" type="HingeJoint3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
node_a = NodePath("..")
node_b = NodePath("../Weapon")
motor/enable = true
motor/target_velocity = 18.8496
<<<<<<< Updated upstream:scenes/player.tscn
motor/max_impulse = 1024.0
=======
motor/max_impulse = 512.0

[node name="Cannon" type="MeshInstance3D" parent="Body" node_paths=PackedStringArray("inputHandler", "posNode")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000182867, 0.085945, -3.8147e-06)
material_override = ExtResource("6_u5q6e")
mesh = ExtResource("7_3un1w")
skeleton = NodePath("../../CombatHandler")
script = ExtResource("14_1byn2")
inputHandler = NodePath("../../InputHandler")
posNode = NodePath("..")
>>>>>>> Stashed changes:scenes/prefabs/objects/player.tscn

[node name="_AudioStreamPlayers" type="Node3D" parent="."]

[node name="Collision" type="AudioStreamPlayer3D" parent="_AudioStreamPlayers"]

[node name="Movement" type="AudioStreamPlayer3D" parent="_AudioStreamPlayers"]

[node name="Ambient" type="AudioStreamPlayer3D" parent="_AudioStreamPlayers"]

[node name="Weapon" type="AudioStreamPlayer3D" parent="_AudioStreamPlayers"]

[node name="CombatHandler" parent="." node_paths=PackedStringArray("positionNode") instance=ExtResource("5_8qfif")]
positionNode = NodePath("../Body")

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("6_ui0xh")

[node name="MotionHandler" type="Node" parent="."]
script = ExtResource("7_bdmj6")
maxSpeed = 13.0

[connection signal="body_entered" from="Body" to="." method="_on_body_body_entered"]
[connection signal="body_entered" from="Body/Weapon" to="." method="_on_sawblade_body_entered"]
